# sport-lottery-sweeper

./: .alembic_tmp.ini  .coverage  .coverage.dmc.pid52796.XxzeZgFx.HNQIp837rWOh  .dockerignore  .env  .env.backup  .env.example  .env.llm.example  .env.local  .env.production  .gitignore  .pre-commit-config.yaml  0.1.53  1.7.4  ADMIN_MENU_QUICK_FIX_GUIDE.md  ADMIN_PANEL_EVALUATION.md  AI_REMOTE_SERVICES_LIVE_PRERELEASE_CHECKLIST_REPORT.md  AI_REMOTE_SERVICES_MANUAL_PRERELEASE_CHECKLIST.md  ARCHIVING_COMPLETION_REPORT.md  BEIDAN_FILTERER_BACKEND_README.md  BEIDAN_FILTER_MANUAL_TEST_CHECKLIST.md  BEIDAN_SCHEDULE_E2E_EVALUATION.md  DataSourceManagement.vue.clean  Dockerfile  Dockerfile.backend  Dockerfile.crawler  Dockerfile.dev  Dockerfile.frontend  Dockerfile.production  EMERGENCY_FIX.py  FINAL_TASK_COMPLETION_SUMMARY.md  FIRST_PRIORITY_COMPLETED.md  FRONTEND_INSTALL_GUIDE.md  FUNCTION_DEVELOPMENT_TEST_REPORT.md  HIGH_PRIORITY_TASK_IMPLEMENTATION_PLAN.md  LEAGUE_MGMT_E2E_TEST_PLAN.md  LOTTERY_SCHEDULE_E2E_EVALUATION.md  MATCH_MGMT_E2E_EVALUATION.md  Makefile  PHASE1_COMPLETED.md  (+496 more)
.codebuddy/: coordination.md  plugin_identities.json  quick-start.md  status.json
.github/: dependabot.yml  pull_request_template.md
.naming-optimization/: EXECUTION_CHECKLIST.md  PHASE1_EXECUTION_REPORT.md
alembic/: env.py
backend/: .env.temp  .env.test  .env.test.example  SOLUTION_SUMMARY.md  __init__.py  admin_panel.py  alembic.ini  api.py  api_response_raw.json  celery_app.py  check_db.py  check_football_matches.py  check_matches.py  check_table_structure.py  check_user.py  config.py  config_fixed.py  data_source_adapter.py  database.py  database_async.py  database_utils.py  db_init.py  debug_lottery_api.py  debug_lottery_error.py  debug_sporttery_page.html  debug_startup.py  delete_admin.py  delete_admin_correct.py  dependencies.py  diagnose_api.py  direct_test.py  exceptions.py  fill_log_data.py  fix_test_issues.py  init_admin.py  init_admin_correct.py  init_admin_simple.py  init_admin_simple2.py  init_db.py  insert_test.py  (+27 more)
config/: alembic.ini  captcha_config.py
crawler/: ENHANCED_IP_POOL_GUIDE.md  README.md  adaptive_proxy_rotator.py  add_ips_to_pool.py  comprehensive_test_30_ips.py  dynamic_proxy_updater.py  flexible_test_30_ips.py  integrated_ip_pool.py  integration_example.py  integration_test.py  ip_fetcher_89ip.py  ip_fetcher_multi.py  ip_proxy.py  ip_proxy_config.py  ip_proxy_example.py  ip_quality_assessment.py  optimized_ip_proxy.py  practical_example.py  proxy_monitor.py  selenium_ip_fetcher.py  simple_test.py  test_120_ips.py  test_30_ips.py  test_dynamic_proxy.py  test_ip_proxy.py  usage_guide.py
(+2454 files in other folders)
